--- a/assets/grupos.css
+++ b/assets/grupos.css
@@ -1,1 +1,3 @@
-.nom_gru{text-align:left;padding-left:4px}.down{margin-top:22px}.color_norm{color:#000}#edit_grupo_1{margin-top:25px}#new_grupo{margin-top:25px}
+.nom_gru{text-align:left;padding-left:4px}
+.down{margin-top:22px}.color_norm{color:#000}
+#edit_grupo_1{margin-top:25px}#new_grupo{margin-top:25px}
